Update storage to use models from libraries